@@ -3,7 +3,7 @@ Maintainer: John Verzani <jverzani@gmail.com>
 License: GPL (>= 3)
 Title: Toolkit implementation of the gWidgets API for use with web
     pages
-LazyLoad: FALSE
+LazyLoad: TRUE
 Author: John Verzani
 Description: Port of the gWidgets API to program dynamic websites with
     R code. This package uses Rook to enable use under R's local web
