@@ -1,3 +1,7 @@
+2011-06-09  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gradio.R (gradio): fix bug in columns (wrong logic)
+
 2011-04-29  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/glayout.R (in.range): implemented [ method to return widgets
